--- a/test.html
+++ b/test.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <script src="phaser.js"></script>
-
-    <script src="game.js"></script>
+    <script src="gametest.js"></script>
 
 </head>
 <body>
